--- a/db.192.168.1
+++ b/db.192.168.1
@@ -14,12 +14,12 @@ $TTL    604800
 210    IN    PTR    okd4-services.okd.local.
 
 ; OpenShift Container Platform Cluster - PTR records
-200    IN    PTR    okd4-bootstrap.lab.okd.local.
-201    IN    PTR    okd4-control-plane-1.lab.okd.local.
-202    IN    PTR    okd4-control-plane-2.lab.okd.local.
-203    IN    PTR    okd4-control-plane-3.lab.okd.local.
-204    IN    PTR    okd4-compute-1.lab.okd.local.
-205    IN    PTR    okd4-compute-2.lab.okd.local.
-206    IN    PTR    okd4-compute-3.lab.okd.local.
-210    IN    PTR    api.lab.okd.local.
-210    IN    PTR    api-int.lab.okd.local.
+200    IN    PTR    okd4-bootstrap.uit.okd.local.
+201    IN    PTR    okd4-control-plane-1.uit.okd.local.
+202    IN    PTR    okd4-control-plane-2.uit.okd.local.
+203    IN    PTR    okd4-control-plane-3.uit.okd.local.
+204    IN    PTR    okd4-compute-1.uit.okd.local.
+205    IN    PTR    okd4-compute-2.uit.okd.local.
+206    IN    PTR    okd4-compute-3.uit.okd.local.
+210    IN    PTR    api.uit.okd.local.
+210    IN    PTR    api-int.uit.okd.local.
